--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
      <div class="resume_content">
        <div class="resume_item resume_info">
          <div class="title">
-           <p class="bold">stephen colbert</p>
-           <p class="regular">Designer</p>
+           <p class="bold">SANDEEP REDDY</p>
+           <p class="regular">Developer</p>
          </div>
          <ul>
            <li>
@@ -28,7 +28,7 @@
                <i class="fas fa-map-signs"></i>
              </div>
              <div class="data">
-               21 Street, Texas <br /> USA
+               4-49-2/1 main road tripuranthakam, <br /> PRAKASAM DISTRICT
              </div>
            </li>
            <li>
@@ -36,7 +36,7 @@
                <i class="fas fa-mobile-alt"></i>
              </div>
              <div class="data">
-               +324 4445678
+               9652156132
              </div>
            </li>
            <li>
@@ -44,7 +44,7 @@
                <i class="fas fa-envelope"></i>
              </div>
              <div class="data">
-               stephen@gmail.com
+               20pa1a0428@vishnu.edu.in
              </div>
            </li>
            <li>
@@ -52,7 +52,7 @@
                <i class="fab fa-weebly"></i>
              </div>
              <div class="data">
-               www.stephen.com
+               www.sandeep.com
              </div>
            </li>
          </ul>
@@ -82,7 +82,7 @@
            </li>
            <li>
              <div class="skill_name">
-               SASS
+               PYTHON
              </div>
              <div class="skill_progress">
                <span style="width: 90%;"></span>
@@ -94,18 +94,18 @@
                JS
              </div>
              <div class="skill_progress">
-               <span style="width: 60%;"></span>
+               <span style="width: 70%;"></span>
              </div>
-             <div class="skill_per">60%</div>
+             <div class="skill_per">70%</div>
            </li>
            <li>
              <div class="skill_name">
-               JQUERY
+               JAVA
              </div>
              <div class="skill_progress">
-               <span style="width: 88%;"></span>
+               <span style="width: 85%;"></span>
              </div>
-             <div class="skill_per">88%</div>
+             <div class="skill_per">85%</div>
            </li>
          </ul>
        </div>
@@ -120,7 +120,7 @@
              </div>
              <div class="data">
                <p class="semi-bold">Facebook</p>
-               <p>Stephen@facebook</p>
+               <p>Sandeep@facebook</p>
              </div>
            </li>
            <li>
@@ -129,25 +129,25 @@
              </div>
              <div class="data">
                <p class="semi-bold">Twitter</p>
-               <p>Stephen@twitter</p>
+               <p>Sandeep@twitter</p>
              </div>
            </li>
            <li>
              <div class="icon">
-               <i class="fab fa-youtube"></i>
+               <i class="fab fa-instagram-square"></i>
              </div>
              <div class="data">
-               <p class="semi-bold">Youtube</p>
-               <p>Stephen@youtube</p>
+               <p class="semi-bold">instagram</p>
+               <p>Sandeep@instagram</p>
              </div>
            </li>
            <li>
              <div class="icon">
-               <i class="fab fa-linkedin"></i>
+               <i class="fab fa-snapchat"></i>
              </div>
              <div class="data">
-               <p class="semi-bold">Linkedin</p>
-               <p>Stephen@linkedin</p>
+               <p class="semi-bold">snapchat</p>
+               <p>Sandeep@snapchat</p>
              </div>
            </li>
          </ul>
@@ -159,32 +159,21 @@
         <div class="title">
            <p class="bold">About us</p>
          </div>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Perspiciatis illo fugit officiis distinctio culpa officia totam atque exercitationem inventore repudiandae?</p>
+        <p>I am someone who is very interested in exploring new things,therefore,I am very happy to learn, code,implement and share what i already know and have with others.I consider myself a good self learned programmer, who learn from failures.</p>
     </div>
     <div class="resume_item resume_work">
         <div class="title">
-           <p class="bold">Work Experience</p>
+           <p class="bold">My Experience</p>
          </div>
         <ul>
             <li>
-                <div class="date">2013 - 2015</div> 
+                <div class="date">2020 - 2024</div> 
                 <div class="info">
-                     <p class="semi-bold">Lorem ipsum dolor sit amet.</p> 
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum, voluptatibus!</p>
-                </div>
-            </li>
-            <li>
-              <div class="date">2015 - 2017</div>
-              <div class="info">
-                     <p class="semi-bold">Lorem ipsum dolor sit amet.</p> 
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum, voluptatibus!</p>
-                </div>
-            </li>
-            <li>
-              <div class="date">2017 - Present</div>
-              <div class="info">
-                     <p class="semi-bold">Lorem ipsum dolor sit amet.</p> 
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum, voluptatibus!</p>
+                     <p class="semi-bold">VISHNU INSTITUTE OF TECHNOLOGY</p> 
+                  <p>-> 8.7 Cgpa in 1st B.Tech.</p>
+                  <p>-> Participating in different clubs.</p>
+                  <p>-> Participating in campus recruitment training (CRT) courses.</p>
+                  <p>-> attending workshops on machine learning.Deep learning, web technologies</p>
                 </div>
             </li>
         </ul>
@@ -195,17 +184,17 @@
          </div>
       <ul>
             <li>
-                <div class="date">2010 - 2013</div> 
+                <div class="date">2017 - 2018</div> 
                 <div class="info">
-                     <p class="semi-bold">Web Designing (Texas University)</p> 
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum, voluptatibus!</p>
+                     <p class="semi-bold">VIGNAN HIGH SCHOOL</p> 
+                  <p>9.5 CGPA</p>
                 </div>
             </li>
             <li>
-              <div class="date">2000 - 2010</div>
+              <div class="date">2018 - 2020</div>
               <div class="info">
-                     <p class="semi-bold">Texas International School</p> 
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum, voluptatibus!</p>
+                     <p class="semi-bold">NRI JUNIOR COLLEGE</p> 
+                  <p>9.79 CGPA</p>
                 </div>
             </li>
         </ul>
